--- a/style.css
+++ b/style.css
@@ -2,101 +2,85 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
 
 body {
-    height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
-    background-color: rgb(220, 208, 231);
-}
-.wrapper {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-    perspective:1000px ;
+    align-items: center;
+    min-height: 100vh;
+    background-color: rgb(142, 88, 196);
 }
 
-.wrapper .flip-card {
+.container {
     position: relative;
-    height: 220px;
-    width: 300px;
-    background-color: rgb(61, 9, 110);
-    transform-style: preserve-3d;
-    transition: all 1s ease-in-out;
-    transform: rotateY(180deg);
-}
-
-#card1:hover {
-    transform: rotateY(0deg);
-}
-#card2:hover {
-    transform: rotateY(0deg);
-}
-#card3:hover {
-    transform: rotateY(0deg);
-}
-#card4:hover {
-    transform: rotateY(0deg);
-}
-#card5:hover {
-    transform: rotateY(0deg);
-}
-#card6:hover {
-    transform: rotateY(0deg);
-}
-#card7:hover {
-    transform: rotateY(0deg);
-}
-#card8:hover {
-    transform: rotateY(0deg);
-}
-#card9:hover {
-    transform: rotateY(0deg);
-}
-#card10:hover {
-    transform: rotateY(0deg);
-}
-#card11:hover {
-    transform: rotateY(0deg);
-}
-#card12:hover {
-    transform: rotateY(0deg);
-}
-
-
-.flip-card .front-card {
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100%;
-    background-color: rgb(61, 9, 110);
-    border-top: 2px solid #20003d;
-    border-left: 2px solid #20003d;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.5);
+    align-items: center;
+    flex-direction: column;
+    gap: 30px;
+    background-color: rgb(229, 209, 247);
+    padding: 40px 60px;
+}
+
+.reset {
+    padding:  15px 20px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(68, 12, 121);
+    border: none;
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+.reset:focus {
+    color: rgb(71, 0, 104);
+    background-color: rgb(181, 134, 224);
+}
+
+.game {
+    width: 440px;
+    height: 440px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
+    transform-style: preserve-3d;
+    perspective: 500px;
+}
+
+.item {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    font-size: 3em;
+    transform: rotateY(180deg);
+    background-color: rgb(68, 12, 121);
+    transition: 0.25s;
+}
+
+.item.cardOpen {
+    transform: rotateY(0deg);
+}
+
+.item::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-color: rgba(71, 0, 104);
+    transition: 0.25s;
+    transform: rotateY(0deg);
     backface-visibility: hidden;
 }
 
-.front-card .triangle::before {
-    content: "";
-    position: absolute;
-    height: 0;
-    width:  0;
-    left: -40px;
-    top: 20px;
-    border-right: 40px solid transparent;
-    border-left: 40px solid transparent;
-    border-bottom: 80px solid rgb(61, 9, 110);;
+.cardOpen:after ,
+.cardMatch:after
+{
+    transform: rotateY(180deg);
 }
 
-.front-card .triangle {
-    position: relative;
-    height: 0;
-    width:  0;
-    border-right: 60px solid transparent;
-    border-left: 60px solid transparent;
-    border-bottom: 110px solid rgb(142, 243, 233);
-}
