--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
     height: 100px;
     font-size: 3em;
     transform: rotateY(180deg);
-    background-color: rgb(68, 12, 121);
+    background-color: rgba(71, 0, 104);
     transition: 0.25s;
 }
 
